refactor: change README description and remove java source configuration in favor to kotlin.jvmToolChain